fix(style): header display on mobile. Logo is now properly centered

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -32,6 +32,7 @@
     margin: 0;
   }
   @media #{$tablet} {
+    margin-right: unset;
     text-align: center;
     width: 100%;
   }
@@ -69,7 +70,6 @@ a {
 
 .containerIconMenu {
   display: none;
-  padding-right: 20px;
   @media #{$tablet} {
     display: block;
   }
